fix center align

--- a/frontend/static/css/index.css
+++ b/frontend/static/css/index.css
@@ -14,6 +14,20 @@ html, body {
 	min-height: 100vh;
 }
 
+#main {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+}
+
+#app {
+    width: 100%;
+    height: 100%;
+    display: flex;
+}
+
 .header {
 	background-color: white;
 	display: grid;
@@ -35,16 +49,10 @@ html, body {
 	float : right;
 	margin: 10px;
 }
-#main {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    left: 0;
-    top: 0;
-}
 
-#app {
-    width: 100%;
-    height: 100%;
-    display: flex;
+.center {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
